# yolo-atlas

./: LICENSE  README.md  pyproject.toml
src/yolo_atlas/: main.py
src/yolo_atlas/templates/: index.html
