[project]
name = "yolo-atlas"
version = "0.1.0"
description = "Travel the world like Atlas"
authors = [
    {name = "mo-martinwilson", email = "martin.wilson@metoffice.gov.uk"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
