[project]
name = "yolo-atlas"
version = "0.1.0"
description = "Travel the world like Atlas"
authors = [
    {name = "mo-martinwilson", email = "martin.wilson@metoffice.gov.uk"},
]
dependencies = [
    "fastapi>=0.115.4",
    "ruff>=0.7.1",
    "mypy>=1.13.0",
    "isort>=5.13.2",
    "pytest>=8.3.3",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
